<resources>
    <string name="app_name">Pick a year</string>
    <string name="main_image">Main image</string>
    <string name="main_question">Question about picture?</string>
    <string name="check_button">Check</string>
    <string name="month_0">January</string>
    <string name="month_1">February</string>
    <string name="month_2">March</string>
    <string name="month_3">April</string>
    <string name="month_4">May</string>
    <string name="month_5">June</string>
    <string name="month_6">July</string>
    <string name="month_7">August</string>
    <string name="month_8">September</string>
    <string name="month_9">October</string>
    <string name="month_10">November</string>
    <string name="month_11">December</string>
    <string name="year_input_hint">Year</string>
    <string name="question_0">When was first episode of the Spongebob?</string>
    <string name="question_1">When was first episode of the Simpsons?</string>
    <string name="month_error">Month is unselected!!</string>
    <string name="check_correct">Correct</string>
    <string name="check_incorrecr">Incorrect</string>
    <string name="check_dismiss">Continue</string>
    <string name="year_error">Year is missing!!</string>
    <string name="Nav_Points">Points: </string>
    <string name="home_text">Pick a Year</string>
    <string name="play_button">Play</string>
    <string name="back_button">Back</string>
    <string name="end_quiz">End</string>
    <string name="leaderboard_button">Leaderboard</string>
    <string name="leaderboard_title_pos">Rank</string>
    <string name="leaderboard_title_score">Score</string>
    <string name="leaderboard_title_date">Date</string>
    <string name="leaderboard_title_questions" >Answered</string>
</resources>
